ci: Update Helm Charts to 7.61.0
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/helmcharts/stable/crds/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
+++ b/helmcharts/stable/crds/checlusters.org.eclipse.che.CustomResourceDefinition.yaml
@@ -1123,19 +1123,15 @@ spec:
                         hosted on Bitbucket (bitbucket.org or self-hosted).
                       properties:
                         endpoint:
-                          default: https://bitbucket.org
-                          description: Bitbucket server endpoint URL.
+                          description: 'Bitbucket server endpoint URL. Deprecated
+                            in favor of `che.eclipse.org/scm-server-endpoint` annotation.
+                            See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.'
                           type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded
-                            Bitbucket OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0:
-                            private key, Bitbucket Application link consumer key and
-                            Bitbucket Application link shared secret must be stored
-                            in `private.key`, `consumer.key` and `shared_secret` keys
-                            respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
-                            For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket
-                            OAuth consumer secret must be stored in `id` and `secret`
-                            keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
+                            Bitbucket OAuth 1.0 or OAuth 2.0 data. See the following
+                            pages for details: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/
+                            and https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
                           type: string
                       required:
                       - secretName
@@ -1149,17 +1145,16 @@ spec:
                         hosted on GitHub (GitHub.com or GitHub Enterprise).
                       properties:
                         endpoint:
-                          default: https://github.com
-                          description: GitHub server endpoint URL.
+                          description: 'GitHub server endpoint URL. Deprecated in
+                            favor of `che.eclipse.org/scm-server-endpoint` annotation.
+                            See the following page for details: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded
-                            GitHub OAuth Client id and GitHub OAuth Client secret,
-                            that stored in `id` and `secret` keys respectively. See
-                            the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+                            GitHub OAuth Client id and GitHub OAuth Client secret.
+                            See the following page for details: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: string
                       required:
-                      - endpoint
                       - secretName
                       type: object
                     type: array
@@ -1171,17 +1166,16 @@ spec:
                         hosted on GitLab (gitlab.com or self-hosted).
                       properties:
                         endpoint:
-                          default: https://gitlab.com
-                          description: GitLab server endpoint URL.
+                          description: 'GitLab server endpoint URL. Deprecated in
+                            favor of `che.eclipse.org/scm-server-endpoint` annotation.
+                            See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
                           type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded
-                            GitHub Application id and GitLab Application Client secret,
-                            that stored in `id` and `secret` keys respectively. See
-                            the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+                            GitHub Application id and GitLab Application Client secret.
+                            See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
                           type: string
                       required:
-                      - endpoint
                       - secretName
                       type: object
                     type: array
@@ -3684,7 +3678,7 @@ spec:
                       type: object
                     type: array
                   workspaceDefaultEditor:
-                    default: che-incubator/che-code/insiders
+                    default: che-incubator/che-code/latest
                     description: The default editor to workspace create with. It could
                       be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`.
                       The URI must start from `http`.
@@ -5278,7 +5272,7 @@ spec:
                   - container:
                       image: quay.io/devfile/universal-developer-image:ubi8-38da5c2
                     name: universal-developer-image
-                  defaultEditor: che-incubator/che-code/insiders
+                  defaultEditor: che-incubator/che-code/latest
                   defaultNamespace:
                     autoProvision: true
                     template: <username>-che
@@ -6756,7 +6750,7 @@ spec:
                       type: object
                     type: array
                   defaultEditor:
-                    default: che-incubator/che-code/insiders
+                    default: che-incubator/che-code/latest
                     description: The default editor to workspace create with. It could
                       be a plugin ID or a URI. The plugin ID must have `publisher/plugin/version`
                       format. The URI must start from `http://` or `https://`.
@@ -6969,19 +6963,15 @@ spec:
                         hosted on Bitbucket (bitbucket.org or self-hosted).
                       properties:
                         endpoint:
-                          default: https://bitbucket.org
-                          description: Bitbucket server endpoint URL.
+                          description: 'Bitbucket server endpoint URL. Deprecated
+                            in favor of `che.eclipse.org/scm-server-endpoint` annotation.
+                            See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.'
                           type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded
-                            Bitbucket OAuth 1.0 or OAuth 2.0 data. For OAuth 1.0:
-                            private key, Bitbucket Application link consumer key and
-                            Bitbucket Application link shared secret must be stored
-                            in `private.key`, `consumer.key` and `shared_secret` keys
-                            respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/.
-                            For OAuth 2.0: Bitbucket OAuth consumer key and Bitbucket
-                            OAuth consumer secret must be stored in `id` and `secret`
-                            keys respectively. See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
+                            Bitbucket OAuth 1.0 or OAuth 2.0 data. See the following
+                            pages for details: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-1-for-a-bitbucket-server/
+                            and https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-the-bitbucket-cloud/.'
                           type: string
                       required:
                       - secretName
@@ -6995,20 +6985,21 @@ spec:
                         hosted on GitHub (GitHub.com or GitHub Enterprise).
                       properties:
                         disableSubdomainIsolation:
-                          description: Disables subdomain isolation.
+                          description: 'Disables subdomain isolation. Deprecated in
+                            favor of `che.eclipse.org/scm-github-disable-subdomain-isolation`
+                            annotation. See the following page for details: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: boolean
                         endpoint:
-                          default: https://github.com
-                          description: GitHub server endpoint URL.
+                          description: 'GitHub server endpoint URL. Deprecated in
+                            favor of `che.eclipse.org/scm-server-endpoint` annotation.
+                            See the following page for details: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded
-                            GitHub OAuth Client id and GitHub OAuth Client secret,
-                            that stored in `id` and `secret` keys respectively. See
-                            the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
+                            GitHub OAuth Client id and GitHub OAuth Client secret.
+                            See the following page for details: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-github/.'
                           type: string
                       required:
-                      - endpoint
                       - secretName
                       type: object
                     type: array
@@ -7020,17 +7011,16 @@ spec:
                         hosted on GitLab (gitlab.com or self-hosted).
                       properties:
                         endpoint:
-                          default: https://gitlab.com
-                          description: GitLab server endpoint URL.
+                          description: 'GitLab server endpoint URL. Deprecated in
+                            favor of `che.eclipse.org/scm-server-endpoint` annotation.
+                            See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
                           type: string
                         secretName:
                           description: 'Kubernetes secret, that contains Base64-encoded
-                            GitHub Application id and GitLab Application Client secret,
-                            that stored in `id` and `secret` keys respectively. See
-                            the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
+                            GitHub Application id and GitLab Application Client secret.
+                            See the following page: https://www.eclipse.org/che/docs/stable/administration-guide/configuring-oauth-2-for-gitlab/.'
                           type: string
                       required:
-                      - endpoint
                       - secretName
                       type: object
                     type: array
