ci: Add new bundle to a catalog
Signed-off-by: Mykhailo Kuznietsov <mkuznets@redhat.com>

--- a/olm-catalog/stable/channel.yaml
+++ b/olm-catalog/stable/channel.yaml
@@ -27,3 +27,5 @@ entries:
     replaces: eclipse-che.v7.59.0
   - name: eclipse-che.v7.60.1
     replaces: eclipse-che.v7.60.0
+  - name: eclipse-che.v7.61.0
+    replaces: eclipse-che.v7.60.1
